# DirectoryTreeUtility

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  DirectoryTreeBuilder.cpp  DirectoryTreeBuilder.h  FileExplorerIntegration.cpp  FileExplorerIntegration.h  FileSaveService.cpp  FileSaveService.h  GlobalHotkeys.cpp  GlobalHotkeys.h  SystemTray.cpp  SystemTray.h  TreeGenerationService.cpp  TreeGenerationService.h  UiRenderer.cpp  UiRenderer.h  UpdateService.cpp  main.cpp  resource.rc
src/app/: Application.cpp  Application.h  ApplicationDialogs.cpp  ApplicationInternal.h  ApplicationUi.cpp  ApplicationWorkflows.cpp  main.cpp
src/platform/win32/: DarkMode.cpp  DarkMode.h  FileExplorerIntegration.cpp  FileExplorerIntegration.h  GlobalHotkeys.cpp  IatHook.h  SystemTray.cpp  SystemTray.h
src/rendering/: UiRenderer.cpp
src/resources/: resource.h  resource.rc
src/services/: DirectoryTreeBuilder.cpp  DirectoryTreeBuilder.h  FileSaveService.cpp  FileSaveService.h  TreeGenerationService.cpp  TreeGenerationService.h  UpdateService.cpp
src/shared/: AppInfo.h  AppTheme.h
